<resources>
    <string name="app_name">car Rental</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_error_title">Sorry</string>
    <string name="empty_ribots">There aren\'t any ribots</string>
    <string name="error_loading_ribots">There was a problem loading the ribots</string>
    <string name="default_notification_channel_id">1</string>
    <string name="no_connection">No internet connect please ty again later</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="no_result_found">No result found</string>
    <string name="login_info">Login Information
</string>
    <string name="login_info2">
Please enter your username and password</string>
    <string name="forgetpassword">
Forgot your password?</string>
    <string name="new_user">New user?</string>
    <string name="register_now">Sign up now
</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="user_name">Full name</string>
    <string name="registe_info">Create an account
</string>
    <string name="checked_data">
Please ensure that the data entered is correct</string>
    <string name="Firstname_label">Forename</string>
    <string name="phone_num_label">Mobile number
</string>
    <string name="emaily_label">E-mail
</string>
    <string name="password_confirm">Confirm password
</string>
    <string name="register_now2">Register now
</string>
    <string name="password_recover_label">Restore password
</string>
    <string name="checked_data_label">
Please enter the phone number / email address used for the registration process</string>
    <string name="send_label">Send</string>
    <string name="email_ecover_label">
Have not  you receive a message with a password reset code yet?</string>
    <string name="rsend_label">Resend code
</string>
    <string name="welcome_label">Welcome</string>
    <string name="help_label">
Let us help you find the right home for you</string>
    <string name="select_label">
Please select the following data</string>
    <string name="follow_label">Follow Up</string>
    <string name="edit_label">
You can edit these options from the Home screen of the filter</string>
    <string name="notifications">Notifications
</string>
    <string name="new_label">new</string>
    <string name="my_accounts">My account</string>
    <string name="my_flats">My own flats
</string>
    <string name="bils_label">Invoices</string>
    <string name="reports_label">Bug reports
</string>
    <string name="langauge_label">App language
</string>
    <string name="contact_label">Contact us
</string>
    <string name="about_label">About us</string>
    <string name="logout_label">Logout</string>
    <string name="filter_label">
Towers Available in</string>
    <string name="search_count_label"> Search results #
</string>
    <string name="tower_label">Tower</string>
    <string name="floor_num_label">Floors No.</string>
    <string name="flate_label">Available</string>
    <string name="flate_label2">The Flats</string>
    <string name="contarct_type_lbel">Type of Contract
</string>
    <string name="towr_page_label">Tower page</string>
    <string name="tower_flate_label">Tower flats
</string>
    <string name="tower_info">Tower Info
</string>
    <string name="year_build">Year of construction:
</string>
    <string name="tower_images_label">Tower Photos</string>
    <string name="flate_status_label">Condition of the Flat</string>
    <string name="flate_status_label_availale">

Flats have problems</string>
    <string name="flate_details_label">Flat details
</string>
    <string name="unfarchnt_label">Un Furnished Flat</string>
    <string name="are_flate_label">The Area
</string>
    <string name="flate_image">
Photos of the Flat</string>
    <string name="deserv_label">Request a reservation
</string>
    <string name="krokey_image">Flat sketch
</string>
    <string name="floor_num_label2"> Floor No.
</string>
    <string name="flate_num_label">  Flat No.
</string>
    <string name="rent_price_label">Rent price
</string>
    <string name="price_selling_label">Selling price
</string>
    <string name="success_message">
Your request has been sent successfully</string>
    <string name="success_message2">You will be notified if your application is accepted</string>
    <string name="close_label">Close</string>
    <string name="en_label">EN</string>
    <string name="ar_label">ع</string>
    <string name="change_language_label">
Select the desired language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="change_language_label_2">Change the application language</string>
    <string name="contact_us">We are happy to communicate with us</string>
    <string name="titleabout2">We welcome your comments and suggestions</string>
    <string name="Direct_communication">Direct communication</string>
    <string name="msg_here">Your message here</string>
    <string name="mobile_num"> Mobile number</string>
    <string name="email">E - mail</string>
    <string name="save_data">send</string>
    <string name="aboutApp">About App</string>
    <string name="update">update App</string>
    <string name="title_report1">You have not reported any problem</string>
    <string name="title_report2">Are you having trouble</string>
    <string name="Reportproblem">Report a problem</string>
    <string name="Building">Building</string>
    <string name="house">house</string>
    <string name="save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="Outstandinginvoices">Invoices due
</string>
    <string name="Invoicevalue">Invoice value</string>
    <string name="Ownershipapartment">Ownership Flat</string>
    <string name="duedate"> Due date</string>
    <string name="Invoicecycle">Invoice cycle</string>
    <string name="Apartmentnumber">Flat number</string>
    <string name="Selectpaymentmethod">Select the appropriate payment method for you</string>
    <string name="Paynow">Pay now</string>
    <string name="Categorizproblem">Categorize problem</string>
    <string name="Floornumber">Floor No.</string>
    <string name="owner">Owner Order</string>
    <string name="Problemdetails">Problem details</string>
    <string name="ChooseAction">Choose Action</string>
    <string name="personal_information">personal information</string>
    <string name="Update">Update</string>
    <string name="problem_classification">Determine the classification of the problem</string>
    <string name="Explain_problem">Explain the problem</string>
    <string name="problem_text">Type the problem text here</string>
    <string name="Is_problem_solved">Is the problem solved </string>
    <string name="problem_solved">The problem solved</string>
    <string name="not_solved">In progress
</string>
    <string name="Modify_password">Modify the password</string>
    <string name="Current_Password">Current Password</string>
    <string name="new_password">new password</string>
    <string name="Confirm_new_password">Confirm the new password</string>
    <string name="Confirm_payment">Confirm the payment</string>
    <string name="payment_receipt">Enter the payment method and attach a copy of the payment receipt</string>
    <string name="paycash">pay cash</string>
    <string name="Through_guard">Through the tower guard</string>
    <string name="Through_office">Through the office</string>
    <string name="receipt_picture">Please attach a payment receipt picture</string>
    <string name="bill_number">bill number</string>
    <string name="Invoice_details">Invoice details</string>
    <string name="Company_concerned">Company concerned</string>
    <string name="contact_us_label2">Contact us</string>
    <string name="bills_deatils">Invoice details
</string>
    <string name="problem_num_lable">The problem number
</string>
    <string name="reports_label_2">Problems Follow
</string>
    <string name="empty_label">This filed is required</string>
    <string name="error_mobile">Mobile No. should be 8 digit</string>
    <string name="confirmPasswordEditText">Password not matched</string>
    <string name="no_arears_label">There is no
</string>
    <string name="choose_area">Choose Governorate</string>
    <string name="choose_area_2">Area</string>
    <string name="empty_label_result">excuse
</string>
    <string name="no_result_label">There are no results
</string>
    <string name="edit_label_entry">Edit inputs</string>
    <string name="choose_city">City</string>
    <string name="with_futnatitae_label">Furnished Flat
</string>
    <string name="empty_country">Country is required</string>
    <string name="empty_city">City is required</string>
    <string name="empty_area">Area is required</string>
    <string name="empty_flats_label">
You have not added flats</string>
    <string name="guest_label">Guest</string>
    <string name="sign_out">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="signout_confrimation">Are you sure to sign out ?</string>
    <string name="login_first_label">You need to login</string>
    <string name="login_label">Sign in</string>
    <string name="signin_confrimation">You should login first</string>
    <string name="email_label_need">Email is required</string>
    <string name="send_emile_tochange_label">
Password change steps have been sent to the entered email address</string>
    <string name="confirmpassword_label">Password not matched</string>
    <string name="no_notification">
There are currently no notifications</string>
    <string name="choose_flate">Choose a flat</string>
    <string name="phonenum_email_label"> E-mail / Mobile Number</string>
    <string name="unit_label">M2</string>
    <string name="days_label">days</string>
    <string name="problem_place">Location of the Problem</string>
    <string name="choose_done">Flat was chosen</string>
    <string name="month_label">months</string>
    <string name="flate_label_3">Flat</string>
    <string name="add_cost_label">Add cost</string>
    <string name="cost_problem_label">
The cost of repairing the problem</string>
    <string name="enter_cost_label">
Enter the cost of fixing the problem</string>
    <string name="currency">DK</string>
    <string name="extra_label">Extra Details</string>
    <string name="add_extra_label">Add exta Details</string>
    <string name="no_problem_label">No problem</string>
    <string name="problem_var_label">there is a problem
</string>
    <string name="fill_cost">Add cost</string>
    <string name="filter_label2">Filter</string>
    <string name="choose_type">Choose type</string>
    <string name="model_label">Choose model
</string>
    <string name="spare_type">Spare type
</string>
    <string name="outamatic_typr">Automatic
</string>
    <string name="normal_type">Normal</string>
    <string name="age_label">Suitable age (years)
</string>
    <string name="age_label_example">Example:20</string>
    <string name="year_label">Year</string>
    <string name="daily_cost_label">Daily rent price (Kuwaiti Dinars)
</string>
    <string name="filter_action_label">Filter</string>
    <string name="rest_label">Reset</string>
</resources>