<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/design_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/top_left_right">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_left_right"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:src="@drawable/succes_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/done_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/success_message"
            android:textColor="@color/md_black_1000"
            android:textSize="@dimen/_19ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_view" />

        <TextView
            android:id="@+id/label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_19sdp"
            android:gravity="center"
            android:text="@string/success_message2"
            android:textColor="#132737"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="@id/done_label"
            app:layout_constraintStart_toStartOf="@id/done_label"
            app:layout_constraintTop_toBottomOf="@id/done_label" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/close_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:drawableStart="@drawable/close"
        android:drawablePadding="@dimen/_8sdp"
        android:text="@string/close_label"
        android:padding="@dimen/_4sdp"
        android:textColor="@color/md_black_1000"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lay" />
</android.support.constraint.ConstraintLayout>